--- a/.htaccess
+++ b/.htaccess
@@ -2,7 +2,7 @@ RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^ index.php [QSA,L]
 
-Header always set Access-Control-Allow-Origin "http://admin-geoalquiler.herokuapp.com/"
+Header always set Access-Control-Allow-Origin "http://admin-geoalquiler.herokuapp.com"
 Header always set Access-Control-Allow-Credentials "true"
 Header always set Access-Control-Max-Age "1000"
 Header always set Access-Control-Allow-Headers "X-Requested-With, Content-Type, Origin, Authorization, Accept, Client-Security-Token, Accept-Encoding"
