--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,10 @@
 {
     "require": {
-        "slim/slim": "^2.6",
+       "php": "^5.6.0",
+        "slim/slim": "2.6",
         "zeuxisoo/slim-eloquent": "0.1.0",
-        "entomb/slim-json-api": "dev-master"
+        "entomb/slim-json-api": "dev-master",
+        "slim/middleware": "*"
     }
 }
+
