--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,9 @@
 {
     "require": {
+    	"php": "^5.5.12",
         "slim/slim": "^2.6",
         "zeuxisoo/slim-eloquent": "0.1.0",
         "entomb/slim-json-api": "dev-master"
+        "slim/middleware": "*"
     }
 }
